# Famille

./: .dockerignore  CMakeLists.txt  Dockerfile  Makefile  main.c  my_radar.c
IA/: main.c
IA 2/: Makefile  action_management.c  algoia.c  main.c
IA 2/CoppeliaSim_Edu_V4_1_0_Ubuntu20_04/: AUTO_SAVED_INSTANCE_2.ttt
IA 2/n4s_package/: Makefile  ai  gmon.out
IA 2/n4s_package/includes/: my.h
IA 2/n4s_package/lib/: action_management.c  algoia.c  main.c  my_str_to_word_array.c  send_info.c  split.c
IA 2/n4s_package/src/: cmds.c  elements.c  forward.c  main.c
my_rpg/: Makefile  game.c
my_rpg/include/: my.h  struct.h
my_rpg/lib/: hexadecimaldown.c  hexadecimalup.c  my_atoi.c  my_binary.c  my_compute_power_rec.c  my_compute_square_root.c  my_find_prime_sup.c  my_getnbr.c  my_is_prime.c  my_isalnum.c  my_isalpha.c  my_isneg.c  my_isnum.c  my_octal.c  my_printf.c  my_put_nbr.c  my_putchar.c  my_putstr.c  my_revstr.c  my_showmem.c  my_showstr.c  my_sort_int_array.c  my_str_isalpha.c  my_str_islower.c  my_str_isnum.c  my_str_isprintable.c  my_str_isupper.c  my_str_to_word_array.c  my_strcapitalize.c  my_strcat.c  my_strclean.c  my_strcmp.c  my_strcpy.c  my_strdup.c  my_strlen.c  my_strlowcase.c  my_strncat.c  my_strncmp.c  my_strncpy.c  my_strstr.c  (+4 more)
my_rpg/scene_management/steps/includes/: game.h  (+3 more)
my_rpg/src/: my_radar.c
scene_management/steps/includes/: scene.h  settings.h
scene_management/steps/src/: game.c  settings.c
src/: main.c  my_paint.c  my_radar.c  paint_context.c  paint_context.h  paint_state.c  paint_state.h  sfml_utils.c  sfml_utils.h  utils.h
(+10 files in other folders)
